--- a/src/app/components/pages/login/login.component.html
+++ b/src/app/components/pages/login/login.component.html
@@ -1,3 +1,7 @@
+<div class="bg">
+    <div class="bg-overlay"></div>
+    <div class="bg-img"></div>
+</div>
 <div class="wrapper">
     <div class="body">
         <div class="logo">
@@ -20,7 +24,7 @@
                     <p-checkbox [label]="'Remember me'" [binary]="true" (onChange)="tick($event)"></p-checkbox>
                     <div class="forget">
                         <span>Forgot the password?</span>
-                        <a>Click here</a>
+                        <a href="#">Click here</a>
                     </div>
 
                     <div class="btn-login">
@@ -28,10 +32,10 @@
                     </div>
                 </div>
 
-                <div class="signup-txt">
+                <!-- <div class="signup-txt">
                     <span>Do not have an account?</span>
                     <a>Sign up now!</a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
