--- a/src/app/components/pages/communities/communities.component.html
+++ b/src/app/components/pages/communities/communities.component.html
@@ -2,4 +2,17 @@
     <app-section-page-header></app-section-page-header>
 </div>
 
-<div class="body"></div>
+<div class="body">
+    <div class="content-navitems">
+        <div class="navitem">
+            News
+        </div>
+        <div class="navitem">
+            Announcement
+        </div>
+        <div class="navitem">
+            Collaboration
+        </div>
+    </div>
+
+</div>
