--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -54,7 +54,7 @@
                 <div class="ui-g hcarousel-item">
                     <div class="ui-g-6">
                         <div class="photo" data-aos="zoom-out" data-aos-duration="1000">
-                            
+                            <img [ngStyle]="{'background-image':'url('+news.img+')'}" alt="">
                         </div>
                     </div>
                     <div class="ui-g-6">
