--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -271,9 +271,9 @@
 .user-sidenav {
     position: fixed;
     left: 0;
-    top: 100px; // topnav 100px
+    top: 0;
 
-    height: calc(100vh - 100px);
+    height: 100%;
     width: 250px;
 
     background-color: rgb(15, 37, 87);
@@ -302,7 +302,6 @@
 
 .user-body {
     position: relative;
-    margin-top: 100px;
     margin-left: 250px;
 }
 
@@ -323,5 +322,92 @@
         color: white;
 
         font-size: 15px;
+    }
+}
+
+.sidebar-userInfo {
+    position: relative;
+
+    height: 300px;
+    width: 100%;
+
+    margin-bottom: 50px;
+
+    & > .userInfo-img {
+        display: inline-block;
+
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        height: 120px;
+        width: 120px;
+
+        border-radius: 50%;
+        border: 1px dashed white;
+
+        & > img {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+
+            height: 90%;
+            width: 90%;
+            
+            border-radius: 50%;
+        }
+    }
+
+    & > .userInfo-label {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+
+        height: auto;
+        width: 100%;
+
+        color: white;
+
+        text-align: center;
+
+        & > .email {
+            color: grey;
+        }
+    }
+}
+
+.sidebar-items {
+    position: relative;
+
+    color: white;
+    list-style: none;
+    
+    padding: 0;
+
+    & > li {
+        position: relative;
+        padding: 15px 15px;
+
+        z-index: 2;
+
+        & > span {
+            padding: 15px 15px;
+        }
+
+        & > .sidebar-childs {
+            list-style: none;
+            padding: 15px 35px;
+
+            & > li {
+                position: relative;
+
+                &:hover {
+                    cursor: pointer;
+                }
+            }
+        }
+
     }
 }
