--- a/src/app/components/pages/communities/communities.component.scss
+++ b/src/app/components/pages/communities/communities.component.scss
@@ -18,3 +18,52 @@
 
     background-color: #E4EBF5;
 }
+
+.content-navitems {
+    position: relative;
+
+    width: 100%;
+    height: auto;
+
+    padding: 80px;
+
+    & > .navitem {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        
+        display: inline-block;
+
+        font-size: 24px;
+        font-weight: bold;
+
+        color:rgb(15, 37, 87);
+
+        border-radius: 3px;
+
+        padding: 10px 20px;
+
+        background-color: #fff;
+        box-shadow: 0px 3px 2px 1px rgba(0, 0, 0, .2);
+
+        transition: .3s all;
+        &:hover {
+            cursor: pointer;
+            box-shadow: 0px 4px 3px 2px rgba(0, 0, 0, .2);
+            top: 45%;
+        }
+
+        &:nth-child(1) {
+            left: 25%;
+            transform: translate(-50%, -50%);
+        }
+        &:nth-child(2) {
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+        &:nth-child(3) {
+            left: 75%;
+            transform: translate(-50%, -50%);
+        }
+    }
+}
