--- a/src/app/components/pages/home/home.component.scss
+++ b/src/app/components/pages/home/home.component.scss
@@ -93,7 +93,7 @@
         width: 100%;
         height: 80%;
 
-        background-color: orange;
+        background-color: rgba(202, 202, 202,0.2);
 
         & > p-carousel {
             position: absolute;
@@ -525,9 +525,10 @@
             height: 100%;
             width: 100%;
 
-            background-image: url('https://picsum.photos/200/300');
-            background-size: cover;
-            background-position: center;
+            & > img {
+                height: 100%;
+                width: 100%;
+            }
         }
 
         & > .hcarousel-desc {
