--- a/src/app/components/pages/membership/membership.component.scss
+++ b/src/app/components/pages/membership/membership.component.scss
@@ -36,11 +36,16 @@
 .title{
   position: relative;
 
-  margin-left: 50%;
+  height: fit-content;
+  width: fit-content;
 
+  margin-left: auto;
+  margin-right: auto;
 
   font-weight: bold;
   color:orange;
+
+  text-align: center;
 }
 
 
@@ -66,16 +71,32 @@
     background-color:#efeff2;
     opacity: 100%;
 
-    box-shadow: 0 0px 30px 10px #d6d6d6;
+    box-shadow: 0 0px 30px 10px rgba(#d6d6d6, 0);
     border-radius: 15px;
+
+    transition: .3s all;
+
+    &:hover {
+      box-shadow: 0 0px 30px 10px rgba(#d6d6d6, 1);
+    }
 
     & > .header {
       display: block !important;
       position: relative;
 
-      height: 100px;
+      height: fit-content;
       width: 100%;
 
+      padding: 25px;
+
+      text-align: center;
+
+      & > span {
+        font-size: 30px;
+        color: orange;
+        font-weight: bold;
+
+      }
 
     }
     & > .body {
