tinggall css je

--- a/src/app/components/pages/membership/membership.component.html
+++ b/src/app/components/pages/membership/membership.component.html
@@ -20,7 +20,10 @@
           <span>Free</span>
         </div>
         <div class="body">
-          <p>dfghjkl</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Aliquet bibendum enim facilisis gravida neque convallis. Nisi porta lorem mollis aliquam ut porttitor leo a diam.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Aliquet bibendum enim facilisis gravida neque convallis. Nisi porta lorem mollis aliquam ut porttitor leo a diam.</p>
         </div>
         <div class="footer">
           <div class="btn"><button pButton type="button" label="Warning" class="ui-button-raised ui-button-warning"></button></div>
@@ -32,7 +35,10 @@
           <span>Free</span>
         </div>
         <div class="body">
-          <p>dfghjkl</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Aliquet bibendum enim facilisis gravida neque convallis. Nisi porta lorem mollis aliquam ut porttitor leo a diam.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Aliquet bibendum enim facilisis gravida neque convallis. Nisi porta lorem mollis aliquam ut porttitor leo a diam.</p>
         </div>
         <div class="footer">
           <div class="btn"><button pButton type="button" label="Warning" class="ui-button-raised ui-button-warning"></button></div>
@@ -43,7 +49,10 @@
           <span>Free</span>
         </div>
         <div class="body">
-          <p>dfghjkl</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Aliquet bibendum enim facilisis gravida neque convallis. Nisi porta lorem mollis aliquam ut porttitor leo a diam.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <p>Aliquet bibendum enim facilisis gravida neque convallis. Nisi porta lorem mollis aliquam ut porttitor leo a diam.</p>
         </div>
         <div class="footer">
           <div class="btn"><button pButton type="button" label="Warning" class="ui-button-raised ui-button-warning"></button></div>
@@ -57,32 +66,28 @@
       <p-steps [model]="items" [readonly]="true"></p-steps>
     </div>
 <div class="ui-g ui-fluid">
+  <div class="body2">
     <div class="ui-g-12 ui-md-4">
       <label for="username">Username :</label>
-        <div class="ui-inputgroup">
-            <span class="ui-inputgroup-addon"><i class="pi pi-user" style="line-height: 1.25;"></i></span>
-            <input type="text" pInputText placeholder="Username">
+        <div class="ui-inputgroup"><input type="text" pInputText>
+
         </div>
     </div>
 
     <div class="ui-g-12 ui-md-4">
       <div class="ui-inputgroup">
-        <label for="password">Password :</label>
-        <span class="ui-inputgroup-addon"><i class="pi pi-user" style="line-height: 1.25;"></i></span>
-        <input type="password" pInputText placeholder="Password">
+        <label for="password">Password :</label><input type="password" pInputText >
     </div>
+
+    <div class="ui-g-12 ui-md-4">
     <div class="ui-inputgroup">
-      <label for="Cpassword">Confrim Password :</label>
-      <span class="ui-inputgroup-addon"><i class="pi pi-user" style="line-height: 1.25;"></i></span>
-      <input type="password" pInputText placeholder="Confirm Password">
+      <label for="Cpassword">Confrim Password :</label><input type="password" pInputText >
   </div>
     </div>
 
     <div class="ui-g-12 ui-md-4">
       <div class="ui-inputgroup">
-        <label for="email">Email :</label>
-        <span class="ui-inputgroup-addon"><i class="pi pi-user" style="line-height: 1.25;"></i></span>
-        <input type="email" pInputText placeholder="Email">
+        <label for="email">Email :</label><input type="email" pInputText >
     </div>
     </div>
     <label for="membership">Membership :</label>
@@ -90,48 +95,73 @@
     <p-radioButton name="groupname" value="reg" label="Regular"></p-radioButton>
     <p-radioButton name="groupname" value="corp" label="Corporate"></p-radioButton>
     <p-checkbox name="groupname" value="val1" label="I agree to the term and conditions"></p-checkbox>
+  </div>
+  <div class="footer2">
     <button pButton type="button" label="Warning" class="ui-button-raised ui-button-warning"></button>
   </div>
+  </div>
+
   </div>
   <hr>
   <div class="wrapper">
     <div class="step">
       <p-steps [model]="items" [readonly]="true"></p-steps>
     </div>
+    <div class="body3">
     <div class="ui-g ui-fluid">
       <div class="ui-g-12 ui-md-4">
         <label for="fName">Full Name :</label>
           <div class="ui-inputgroup">
-              <span class="ui-inputgroup-addon"><i class="pi pi-user" style="line-height: 1.25;"></i></span>
-              <input type="text" pInputText placeholder="Full Name">
+              <input type="text" pInputText >
           </div>
       </div>
 
       <div class="ui-g-12 ui-md-4">
         <div class="ui-inputgroup">
-          <label for="password">Date of Birthng s :</label>
-          <span class="ui-inputgroup-addon"><i class="pi pi-user" style="line-height: 1.25;"></i></span>
-          <input type="password" pInputText placeholder="Password">
+          <label for="birth">Date of Birth :</label>
+          <input type="text" pInputText >
       </div>
+      <div class="ui-g-12 ui-md-4">
       <div class="ui-inputgroup">
-        <label for="Cpassword">Confrim Password :</label>
-        <span class="ui-inputgroup-addon"><i class="pi pi-user" style="line-height: 1.25;"></i></span>
-        <input type="password" pInputText placeholder="Confirm Password">
+        <label for="phonNum">Phone Number :</label>
+        <input type="text" pInputText >
     </div>
       </div>
 
       <div class="ui-g-12 ui-md-4">
         <div class="ui-inputgroup">
-          <label for="email">Email :</label>
-          <span class="ui-inputgroup-addon"><i class="pi pi-user" style="line-height: 1.25;"></i></span>
-          <input type="email" pInputText placeholder="Email">
+          <label for="address">Address :</label>
+          <input type="text" pInputText >
+         </div>
       </div>
 
-  </div>
+      <div class="ui-g-12 ui-md-4">
+        <div class="ui-inputgroup">
+          <label for="crs">Course :</label>
+          <input type="text" pInputText >
+         </div>
+      </div>
+    </div>
+    </div>
+    <div class="footer3">
+      <button pButton type="button" label="Warning" class="ui-button-raised ui-button-warning"></button>
+    </div>
+    </div>
   <hr>
   <div class="wrapper">
     <div class="step">
       <p-steps [model]="items" [readonly]="true"></p-steps>
     </div>
+    <div class="body4">
+     <label for="successful">fjsdhjksdfkhsdkf</label>
+     <label for="proof">dfsdnfjlsdfjsdfjksdnkfj</label>
+     <label for="contact">sdfkjsdfjksdnjfkdsjkf</label>
+    </div>
+    <div class="footer4">
+      <button pButton type="button" label="Warning" class="ui-button-raised ui-button-warning"></button>
+
+    </div>
+
+
   </div>
 </div>
